Update project website names

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
       <div class="row">
         <div class="col-md-6">
           <div class="project-description">
-            <h3 class="project-title"><a href="https://sage-swan-c8d97c.netlify.app/" target="_blank" title="Launch Fidelity page">Finance</a></h2>
-                <div class="project-1 fidelity border-box"><a href="https://sage-swan-c8d97c.netlify.app/" target="_blank">
+            <h3 class="project-title"><a href="https://fidelity-mml95.netlify.app" target="_blank" title="Launch Fidelity page">Finance</a></h2>
+                <div class="project-1 fidelity border-box"><a href="https://fidelity-mml95.netlify.app" target="_blank">
                 <img
                   src="/src/finance.png"
                   class="img-fluid"
@@ -89,7 +89,7 @@
                   HTML, CSS and JavaScript
                 </p>
                 <!-- <a
-                  href="https://sage-swan-c8d97c.netlify.app/"
+                  href="https://fidelity-mml95.netlify.app"
                   class="btn btn-launch-button mb-5"
                   title="Launch Fidelity page"
                   target="_blank"
@@ -100,8 +100,8 @@
 
         <div class="col-md-6">
           <div class="project-description">
-            <h3 class="project-title"><a href="https://gentle-sable-501fdd.netlify.app" target="_blank" title="Launch camera site">Photography</a></h3>
-            <div class="project-1 border-box"><a href="https://gentle-sable-501fdd.netlify.app" target="_blank">
+            <h3 class="project-title"><a href="https://35mm-cameras-mml95.netlify.app" target="_blank" title="Launch camera site">Photography</a></h3>
+            <div class="project-1 border-box"><a href="https://35mm-cameras-mml95.netlify.app" target="_blank">
                 <img
                   src="/src/35mm cameras.png"
                   class="img-fluid"
@@ -119,8 +119,8 @@
       <div class="row">
         <div class="col-md-6">
           <div class="project-description">
-            <h3 class="project-title"><a href="https://sage-boba-227bc0.netlify.app/" target="_blank" title="Launch weather app">Weather</a></h3>
-            <div class="project-1 border-box"><a href="https://sage-boba-227bc0.netlify.app/" target="_blank">
+            <h3 class="project-title"><a href="https://world-weather-mml95.netlify.app" target="_blank" title="Launch weather app">Weather</a></h3>
+            <div class="project-1 border-box"><a href="https://world-weather-mml95.netlify.app" target="_blank">
                 <img
                   src="/src/orange weather.png"
                   class="img-fluid"
@@ -129,10 +129,10 @@
                 />
                 </a></div>
                 <p class="mt-4 project-description">
-                HTML, CSS, Bootstrap, JavaScript - <a href="https://unique-bubblegum-f21c80.netlify.app" title="React app version" target="_blank"><i class="fa-brands fa-react fa-spin" style="--fa-animation-duration: 3s"></i></a>
+                HTML, CSS, Bootstrap, JavaScript - <a href="react-world-weather-mml95" title="React app version" target="_blank"><i class="fa-brands fa-react fa-spin" style="--fa-animation-duration: 3s"></i></a>
                 </p>
                 <!-- <a
-                  href="https://sage-boba-227bc0.netlify.app/"
+                  href="https://world-weather-mml95.netlify.app"
                   class="btn btn-launch-button mb-5"
                   title="Launch weather app"
                   target="_blank"
@@ -179,8 +179,8 @@
 
         <div class="col-md-6">
           <div class="project-description">
-            <h3 class="project-title"><a href="https://rad-caramel-19f9f3.netlify.app/" target="_blank" title="Launch travel website">Travel Deux</a></h3>
-            <div class="project-1 border-box"><a href="https://rad-caramel-19f9f3.netlify.app/" target="_blank">
+            <h3 class="project-title"><a href="https://travel-ops-mml95.netlify.app" target="_blank" title="Launch travel website">Travel Deux</a></h3>
+            <div class="project-1 border-box"><a href="https://travel-ops-mml95.netlify.app" target="_blank">
                 <img
                   src="/src/hawaiitravel.png"
                   class="img-fluid"
@@ -198,8 +198,8 @@
       <div class="row">
       <div class="col-md-6">
           <div class="project-description">
-            <h3 class="project-title"><a href="https://lovely-nougat-78618c.netlify.app/" target="_blank" title="Launch dictionary">Dictionary</a></h3>
-            <div class="project-1 border-box"><a href="https://lovely-nougat-78618c.netlify.app/" target="_blank">
+            <h3 class="project-title"><a href="https://dictionary-mml95.netlify.app" target="_blank" title="Launch dictionary">Dictionary</a></h3>
+            <div class="project-1 border-box"><a href="https://dictionary-mml95.netlify.app" target="_blank">
                 <img
                   src="/src/dictionary.png"
                   class="img-fluid"
@@ -211,7 +211,7 @@
                 HTML, CSS, JavaScript and React
                 </p>
                 <!-- <a
-                  href="https://lovely-nougat-78618c.netlify.app/"
+                  href="https://dictionary-mml95.netlify.app"
                   class="btn btn-launch-button mb-5"
                   title="Launch dictionary"
                   target="_blank"
@@ -223,8 +223,8 @@
       <!-- <div class="d-flex align-items-center justify-content-center"> -->
         <div class="col-md-6">
           <div class="project-description">
-            <h3 class="project-title"><a href="https://clinquant-khapse-d0c0d8.netlify.app/" target="_blank"  title="Launch storefront">Web Store</a></h3>
-            <div class="project-1 border-box"><a href="https://clinquant-khapse-d0c0d8.netlify.app/" target="_blank">
+            <h3 class="project-title"><a href="https://coming-soon-mml95.netlify.app" target="_blank"  title="Launch storefront">Web Store</a></h3>
+            <div class="project-1 border-box"><a href="https://coming-soon-mml95.netlify.app" target="_blank">
                 <img
                   src="/src/coming soon.png"
                   class="img-fluid"
@@ -236,7 +236,7 @@
                 HTML, CSS, React and Next.js - <em><strong>Coming soon</strong></em>
                 </p>
                 <!-- <a
-                  href="https://clinquant-khapse-d0c0d8.netlify.app/"
+                  href="https://coming-soon-mml95.netlify.app"
                   class="btn btn-launch-button mb-5"
                   title="Launch store-front"
                   target="_blank"
