Correct react weather site address

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 />
                 </a></div>
                 <p class="mt-4 project-description">
-                HTML, CSS, Bootstrap, JavaScript - <a href="react-world-weather-mml95" title="React app version" target="_blank"><i class="fa-brands fa-react fa-spin" style="--fa-animation-duration: 3s"></i></a>
+                HTML, CSS, Bootstrap, JavaScript - <a href="https://react-world-weather-mml95.netlify.app" title="React app version" target="_blank"><i class="fa-brands fa-react fa-spin" style="--fa-animation-duration: 3s"></i></a>
                 </p>
                 <!-- <a
                   href="https://world-weather-mml95.netlify.app"
