Added individual project GitHub links

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 />
                 </a></div>
                 <p class="mb-5 mt-4 project-description">
-                  HTML, CSS and JavaScript
+                  HTML, CSS and JavaScript - <a href="https://github.com/mml95/fidelity" target="_blank" title="View GitHub code"><i class="fa-brands fa-github"></i></a>
                 </p>
                 <!-- <a
                   href="https://fidelity-mml95.netlify.app"
@@ -111,7 +111,7 @@
                 />
                 </a></div>
                 <p class="mt-4 project-description">
-                HTML, CSS/Grid and JavaScript
+                HTML, CSS/Grid and JavaScript - <a href="https://github.com/mml95/hobby-project-35mm" target="_blank" title="View GitHub code"><i class="fa-brands fa-github"></i></a>
                 </p>
           </div>
         </div>
@@ -130,7 +130,7 @@
                 />
                 </a></div>
                 <p class="mt-4 project-description">
-                HTML, CSS, Bootstrap, JavaScript - <a href="https://react-world-weather-mml95.netlify.app" title="React app version" target="_blank"><i class="fa-brands fa-react fa-spin" style="--fa-animation-duration: 3s"></i></a>
+                HTML, CSS, Bootstrap, JavaScript - <a href="https://github.com/mml95/wx-app-javascript-2" target="_blank" title="View GitHub code"><i class="fa-brands fa-github"></i></a><a href="https://react-world-weather-mml95.netlify.app" title="React app version" target="_blank"><i class="fa-brands fa-react fa-spin" style="--fa-animation-duration: 3s"></i></a>
                 </p>
                 <!-- <a
                   href="https://world-weather-mml95.netlify.app"
@@ -154,7 +154,7 @@
                 />
                 </a></div>
                 <p class="mt-4 project-description">
-                HTML, CSS and JavaScript
+                HTML, CSS and JavaScript - <a href="https://github.com/mml95/world-clock" target="_blank" title="View GitHub code"><i class="fa-brands fa-github"></i></a>
                 </p>
           </div>
         </div>
@@ -173,7 +173,7 @@
                 />
                 </a></div>
                 <p class="mt-4 bottom-row">
-                HTML, CSS/Grid
+                HTML, CSS/Grid - <a href="https://github.com/mml95/arizona-travel" target="_blank" title="View GitHub code"><i class="fa-brands fa-github"></i></a>
                 </p>
           </div>
         </div>
@@ -190,7 +190,7 @@
                 />
                 </a></div>
                 <p class="mt-4 project-description">
-                HTML, CSS/Flexbox
+                HTML, CSS/Flexbox - <a href="https://github.com/mml95/travel-ops" target="_blank" title="View GitHub code"><i class="fa-brands fa-github"></i></a>
                 </p>
           </div>
         </div>
@@ -209,7 +209,7 @@
                 />
                 </a></div>
                 <p class="mt-4 project-description">
-                HTML, CSS, JavaScript and React
+                HTML, CSS, JavaScript and React - <a href="https://github.com/mml95/dictionary-app-react" target="_blank" title="View GitHub code"><i class="fa-brands fa-github"></i></a>
                 </p>
                 <!-- <a
                   href="https://dictionary-mml95.netlify.app"
