--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <body id="home">
 
   <header>
-    <div class="container hero-enchilada">
+    <div class="container">
       <nav class="fixed-top">
         <ul>
           <button class="toggle"></button>
@@ -49,7 +49,7 @@
     </div>
   </header>
 
-<section class="first-page">
+<section class="first-page hero-enchilada">
     <div class="container below-hero">
       <div class="row">
         <div class="col-sm-6">
