--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="M.M. Lawry is a front-end developer based in Austin, TX" />
+    <meta name="google-site-verification" content="Pf3MleOW8fM0z2O37zKrUNUT-0yhnZgfv6mquNjubCo" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
       rel="stylesheet"
