--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="M.M. Lawry is a front-end developer based in Austin, TX" />
     <meta name="google-site-verification" content="Pf3MleOW8fM0z2O37zKrUNUT-0yhnZgfv6mquNjubCo" />
     <meta name="google-site-verification" content="ZHLXV_MvkesWKq41KAlpbhsjior57V0XVgTmBDQYdgk" />
+    <meta name="robots" content="noindex, nofollow" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
       rel="stylesheet"
