--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <div class="row">
         <div class="col-md-6">
           <div class="project-description">
-            <h3 class="project-title"><a href="https://fidelity-mml95.netlify.app" target="_blank" title="Launch Fidelity page">Finance</a></h2>
+            <h3 class="project-title"><a href="https://fidelity-mml95.netlify.app" target="_blank" title="Launch Fidelity landing page">Finance</a></h2>
                 <div class="project-1 fidelity border-box"><a href="https://fidelity-mml95.netlify.app" target="_blank">
                 <img
                   src="/src/finance.png"
@@ -104,7 +104,7 @@
 
         <div class="col-md-6">
           <div class="project-description">
-            <h3 class="project-title"><a href="https://35mm-cameras-mml95.netlify.app" target="_blank" title="Launch camera site">Photography</a></h3>
+            <h3 class="project-title"><a href="https://35mm-cameras-mml95.netlify.app" target="_blank" title="Launch camera landing page">Photography</a></h3>
             <div class="project-1 border-box"><a href="https://35mm-cameras-mml95.netlify.app" target="_blank">
                 <img
                   src="/src/35mm cameras.png"
@@ -123,7 +123,7 @@
       <div class="row">
         <div class="col-md-6">
           <div class="project-description">
-            <h3 class="project-title"><a href="https://world-weather-mml95.netlify.app" target="_blank" title="Launch weather app">Weather</a></h3>
+            <h3 class="project-title"><a href="https://world-weather-mml95.netlify.app" target="_blank" title="Launch weather app">Weather -</a><a href="https://react-world-weather-mml95.netlify.app" title="Launch React app version" target="_blank"><i class="fa-brands fa-react fa-spin" style="--fa-animation-duration: 4.5s"></i></a></h3>
             <div class="project-1 border-box"><a href="https://world-weather-mml95.netlify.app" target="_blank">
                 <img
                   src="/src/orange weather.png"
@@ -133,7 +133,7 @@
                 />
                 </a></div>
                 <p class="mt-4 project-description">
-                HTML, CSS, Bootstrap, JavaScript - <a href="https://github.com/mml95/wx-app-javascript-2" target="_blank" title="View GitHub code"><i class="fa-brands fa-github"></i></a><a href="https://react-world-weather-mml95.netlify.app" title="React app version" target="_blank"><i class="fa-brands fa-react fa-spin" style="--fa-animation-duration: 3s"></i></a>
+                HTML, CSS, Bootstrap, JavaScript - <a href="https://github.com/mml95/wx-app-javascript-2" target="_blank" title="View GitHub code"><i class="fa-brands fa-github"></i></a>
                 </p>
                 <!-- <a
                   href="https://world-weather-mml95.netlify.app"
