--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <h3 class="project-title"><a href="https://35mm-cameras-mml95.netlify.app" target="_blank" title="Launch camera landing page">Photography</a></h3>
             <div class="project-1 border-box"><a href="https://35mm-cameras-mml95.netlify.app" target="_blank">
                 <img
-                  src="/src/35mm cameras.png"
+                  src="/src/35mm-cameras.png"
                   class="img-fluid"
                   alt="35mm camera project"
                   title="35mm camera site"
