--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="container">
       <div class="row" id="project-header">
         <div class="col text-center">
-          <h2><span class="page-name project-header-font">Portfolio</span></h2>
+          <h2><span class="page-name project-header-font">Projects</span></h2>
         </div>
       </div>
       <div class="row">
