--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="container below-hero">
       <div class="row">
         <div class="col-sm-6">
-          <img src="/src/hero mug.png" class="img-fluid mug" title="MML in VR" />
+          <img src="/src/hero-mug.png" class="img-fluid mug" title="MML in VR" />
         </div>
         <div class="col-sm-6 hero">
           <h1 class="mb-3">Howdy, I'm <span class="name">MMLawry</span></h1>
@@ -114,7 +114,7 @@
             <h3 class="project-title"><a href="https://world-weather-mml95.netlify.app" target="_blank" title="Launch weather app">Weather</a> -<a href="https://react-world-weather-mml95.netlify.app" title="Launch React app version" target="_blank"><i class="fa-brands fa-react fa-spin" style="--fa-animation-duration: 4.5s"></i></a></h3>
             <div class="project-1 border-box"><a href="https://world-weather-mml95.netlify.app" target="_blank">
                 <img
-                  src="/src/orange weather.png"
+                  src="/src/orange-weather.png"
                   class="img-fluid"
                   alt="Weather 2 project"
                   title="Weather forecast"
@@ -138,7 +138,7 @@
             <h3 class="project-title"><a href="https://world-clock-mml95.netlify.app" target="_blank" title="Launch world clock">World Clock</a></h3>
             <div class="project-1 border-box"><a href="https://world-clock-mml95.netlify.app" target="_blank">
                 <img
-                  src="/src/world clock.png"
+                  src="/src/world-clock.png"
                   class="img-fluid"
                   alt="Clock project"
                   title="Clock site"
@@ -174,7 +174,7 @@
             <h3 class="project-title"><a href="https://travel-ops-mml95.netlify.app" target="_blank" title="Launch travel website">Travel Deux</a></h3>
             <div class="project-1 border-box"><a href="https://travel-ops-mml95.netlify.app" target="_blank">
                 <img
-                  src="/src/hawaiitravel.png"
+                  src="/src/hawaii-travel.png"
                   class="img-fluid"
                   alt="Travel project"
                   title="Travel site"
@@ -218,7 +218,7 @@
             <h3 class="project-title"><a href="https://coming-soon-mml95.netlify.app" target="_blank"  title="Launch storefront">Web Store</a></h3>
             <div class="project-1 border-box"><a href="https://coming-soon-mml95.netlify.app" target="_blank">
                 <img
-                  src="/src/coming soon.png"
+                  src="/src/coming-soon.png"
                   class="img-fluid"
                   alt="Web Store project"
                   title="E-commerce site"
