Add arrows, delete old code

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
           <div class="mt-5">
             <a href="#contact-header" class="btn btn-branding" title="Contact MML">Contact me</a
             >
+            <div class="mt-5 d-sm-none"><a href="#project-header" title="My projects"><i class="fa-solid fa-angles-down fa-fade fa-xl"></i></a></div>
         </div>
       </div>
     </div>
@@ -80,13 +81,6 @@
                 <p class="mb-5 mt-4 project-description">
                   HTML, CSS and JavaScript - <a href="https://github.com/mml95/fidelity" target="_blank" title="View GitHub code"><i class="fa-brands fa-github"></i></a>
                 </p>
-                <!-- <a
-                  href="https://fidelity-mml95.netlify.app"
-                  class="btn btn-launch-button mb-5"
-                  title="Launch Fidelity page"
-                  target="_blank"
-                  >View project</a
-                > -->
           </div>
         </div>
 
@@ -123,13 +117,6 @@
                 <p class="mt-4 project-description">
                 HTML, CSS, Bootstrap, JavaScript - <a href="https://github.com/mml95/wx-app-javascript-2" target="_blank" title="View GitHub code"><i class="fa-brands fa-github"></i></a>
                 </p>
-                <!-- <a
-                  href="https://world-weather-mml95.netlify.app"
-                  class="btn btn-launch-button mb-5"
-                  title="Launch weather app"
-                  target="_blank"
-                  >View project</a
-                > -->
           </div>
         </div>
 
@@ -202,13 +189,6 @@
                 <p class="mt-4 project-description">
                 HTML, CSS, JavaScript and React - <a href="https://github.com/mml95/dictionary-app-react" target="_blank" title="View GitHub code"><i class="fa-brands fa-github"></i></a>
                 </p>
-                <!-- <a
-                  href="https://dictionary-mml95.netlify.app"
-                  class="btn btn-launch-button mb-5"
-                  title="Launch dictionary"
-                  target="_blank"
-                  >View project</a
-                > -->
           </div>
         </div>
 
@@ -227,13 +207,6 @@
                 <p class="mt-4 bottom-row">
                 HTML, CSS, React and Next.js - <em><strong>Coming soon</strong></em>
                 </p>
-                <!-- <a
-                  href="https://coming-soon-mml95.netlify.app"
-                  class="btn btn-launch-button mb-5"
-                  title="Launch store-front"
-                  target="_blank"
-                  >Coming soon</a
-                > -->
           </div>
         </div>
       </div>
@@ -295,12 +268,6 @@
           <h2><span class="page-name misc-header-font">Contact</span></h2>
        </div>
       </div>
-      <!-- <div class="row">
-        <div class="col text-center">
-          <h2>Email</h2>
-        </div>
-      </div>
-  </div> -->
 </section>
 
   <footer>
@@ -348,7 +315,11 @@
 
     toggle.addEventListener("click", () => toggle.classList.toggle("active"));
 
-// const links = document.querySelectorAll("nav ul li a");
+    </script>
+  </body>
+  </html>
+
+<!-- // const links = document.querySelectorAll("nav ul li a");
 
 // const linkOffsets = [];
 // links.forEach(link => {
@@ -366,8 +337,4 @@
 //       link.classList.remove("active");
 //     }
 //   });
-// });
-
-    </script>
-  </body>
-  </html>
+// }); -->
