--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <div class="mt-5">
             <a href="#contact-header" class="btn btn-branding" title="Contact MML">Contact me</a
             >
-            <div class="mt-5 d-sm-none"><a href="#project-header" title="My projects"><i class="fa-solid fa-angles-down fa-fade fa-2xl"></i></a></div>
+            <div class="mt-5"><a href="#project-header" title="My projects"><i class="fa-solid fa-angles-down fa-fade fa-2xl"></i></a></div>
         </div>
       </div>
     </div>
