--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <li class="about"><a href="#about-header" title="About me">About</a></li>
           <li class="project"><a href="#project-header" title="My projects">Portfolio</a></li>
           <li class="contact"><a href="#contact-header" title="Contact me">Contact</a></li>
-          <li class="resume d-none d-sm-inline"><a href="src/MMLResume.pdf" title="Resume" target="_blank">Resume</a></li>
+          <li class="resume d-none d-sm-inline"><a href="src/MMLResume.pdf" title="View my Resume" target="_blank">Resume</a></li>
           <li class="epilogue d-none d-sm-inline"><a href="#epilogue-header" title="Special message">Epilogue</a></li>
         </ul>
      </nav>
@@ -287,6 +287,7 @@
       <a href="mailto:mml@mml95.dev" target="_blank" title="Email me"><i class="fa-solid fa-envelope"></i></a>
       <a href="https://github.com/mml95" target="_blank" title="View my Github profile"><i class="fa-brands fa-github fa-bounce"style="--fa-animation-duration: 2s"></i></a>
       <a href="https://www.linkedin.com/in/mml95/" target="_blank" title="View my LinkedIn page"><i class="fa-brands fa-linkedin"></i></a>
+      <a href="src/MMLResume.pdf" class="d-block d-sm-none" target="_blank" title="View my Resume"><i class="fa-regular fa-file"></i></a>
     </div> 
     <div class="d-flex justify-content-center">
       <a href="mailto:mml@mml95.dev" class="email-link" title="Email me">mml@mml95.dev</a>
