Move up mobile layout page 1

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <img src="/src/hero-mug.png" class="img-fluid mug" title="MML in VR" />
         </div>
         <div class="col-sm-6 hero">
-          <h1 class="mb-3">Howdy, I'm <span class="name">MMLawry</span></h1>
+          <h1 class="mb-sm-2">Howdy, I'm <span class="name">MMLawry</span></h1>
           <h2>Frontend Developer || Austin, TX</h2>
           <div class="mt-5">
             <a href="#contact-header" class="btn btn-branding" title="Contact MML">Contact me</a
