--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
   </header>
 
-  <section class="first-page hero-enchilada">
+  <section class="first-page home hero-enchilada">
     <div class="container below-hero">
       <div class="row">
         <div class="col-sm-6">
@@ -59,7 +59,7 @@
     </div>
   </section>
 
-  <section>
+  <section class="project">
     <div class="container">
       <div class="row" id="project-header">
         <div class="col text-center">
@@ -223,7 +223,7 @@
     </div>
   </section>
 
-  <section>
+  <section class="about">
     <div class="container">
       <div class="row" id="about-header">
         <div class="col">
@@ -253,7 +253,7 @@
     </div>
   </section>
 
-  <section>
+  <section class="epilogue">
     <div class="container">
       <div class="row" id="epilogue-header">
         <div class="col text-center">
@@ -272,7 +272,7 @@
     </div>
   </section>
 
-  <section>
+  <section class="contact">
     <div class="container">
       <div class="row" id="contact-header">
         <div class="col text-center">
@@ -326,7 +326,7 @@
       localStorage.setItem("mode", "light");
     });
 
-    toggle.addEventListener("click", () => toggle.classList.toggle("active"));
+    toggle.addEventListener("scroll", () => toggle.classList.toggle("active"));
 
     </script>
   </body>
