Remove spin duration weather

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <div class="row">
         <div class="col-md-6">
           <div class="project-description">
-            <h3 class="project-title"><a href="https://world-weather-mml95.netlify.app" target="_blank" title="Launch weather app">Weather</a> -<a href="https://react-world-weather-mml95.netlify.app" title="Launch React app version" target="_blank"><i class="fa-brands fa-react fa-spin" style="--fa-animation-duration: 4.5s"></i></a></h3>
+            <h3 class="project-title"><a href="https://world-weather-mml95.netlify.app" target="_blank" title="Launch weather app">Weather</a> -<a href="https://react-world-weather-mml95.netlify.app" title="Launch React app version" target="_blank"><i class="fa-brands fa-react fa-spin"></i></a></h3>
               <div class="project-1 border-box"><a href="https://world-weather-mml95.netlify.app" target="_blank">
                   <img
                     src="/src/orange-weather.png"
