Swap Fidelity with Ethereum

--- a/index.html
+++ b/index.html
@@ -184,19 +184,19 @@
       <div class="row">
         <div class="col-md-6">
           <div class="project-description">
-            <h3 class="project-title"><a href="https://fidelity-mml95.netlify.app" target="_blank" title="Launch Fidelity landing page">Finance</a></h2>
-              <div class="project-1 fidelity border-box"><a href="https://fidelity-mml95.netlify.app" target="_blank">
+            <h3 class="project-title"><a href="https://ethereum-mml95.netlify.app" target="_blank" title="Launch Fidelity landing page">Crypto</a></h2>
+              <div class="project-1 fidelity border-box"><a href="https://ethereum-mml95.netlify.app" target="_blank">
                 <img
-                  src="/src/finance.png"
+                  src="/src/ethereum.png"
                   class="img-fluid"
                   id="project-1"
-                  alt="Finance project"
-                  title="Fidelity facts"
+                  alt="Ethereum project"
+                  title="Ethereum facts"
                 />
                 </a>
               </div>
                 <p class="mb-5 mt-4 project-description">
-                  HTML, CSS and JavaScript - <a href="https://github.com/mml95/fidelity" target="_blank" title="View GitHub code"><i class="fa-brands fa-github"></i></a>
+                  HTML, CSS and JavaScript - <a href="https://github.com/mml95/ethereum" target="_blank" title="View GitHub code"><i class="fa-brands fa-github"></i></a>
                 </p>
           </div>
         </div>
