--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
         <div class="col">
           <div class="epilogue-section">
             <p class="epilogue-paragraph">
-              Thank-you to my wonderful parents who always believe my capabilities are more than I can imagine. I love you. I'd also like to recognize the KVUE team as well as plentiful friends and family who have encouraged my growth and new adventures while providing me a foundation to keep building. Yes, I am very lucky indeed.
+              Thank-you to my wonderful parents who always believe my capabilities are more than I can imagine. I love you. I'd also like to recognize my colleague support crew as well as plentiful friends and family who have encouraged my growth and new adventures while providing me a foundation to keep building. Yes, I am very lucky indeed.
             </p>
         </div>
        </div>
