Replace crypto with blockchain

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
       <div class="row">
         <div class="col-md-6">
           <div class="project-description">
-            <h3 class="project-title"><a href="https://ethereum-mml95.netlify.app" target="_blank" title="Launch Fidelity landing page">Crypto</a></h2>
+            <h3 class="project-title"><a href="https://ethereum-mml95.netlify.app" target="_blank" title="Launch Fidelity landing page">Blockchain</a></h2>
               <div class="project-1 fidelity border-box"><a href="https://ethereum-mml95.netlify.app" target="_blank">
                 <img
                   src="/src/ethereum.png"
