Update project links

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
       <div class="row">
         <div class="col-md-6">
           <div class="project-description">
-            <h3 class="project-title"><a href="https://world-weather-mml95.netlify.app" target="_blank" title="Launch weather app">Weather</a> -<a href="https://react-world-weather-mml95.netlify.app" title="Launch React app version" target="_blank"><i class="fa-brands fa-react fa-spin" style="--fa-animation-duration: 4.5s"></i></a></h3>
-              <div class="project-1 border-box"><a href="https://world-weather-mml95.netlify.app" target="_blank">
+            <h3 class="project-title"><a href="https://mml95-world-weather.netlify.app" target="_blank" title="Launch weather app">Weather</a> -<a href="https://mml95-react-world-weather.netlify.app" title="Launch React app version" target="_blank"><i class="fa-brands fa-react fa-spin" style="--fa-animation-duration: 4.5s"></i></a></h3>
+              <div class="project-1 border-box"><a href="https://mml95-world-weather.netlify.app" target="_blank">
                   <img
                     src="/src/orange-weather.png"
                     class="img-fluid"
@@ -88,8 +88,8 @@
 
         <div class="col-md-6">
           <div class="project-description">
-            <h3 class="project-title"><a href="https://world-clock-mml95.netlify.app" target="_blank" title="Launch world clock">World Clock</a></h3>
-              <div class="project-1 border-box"><a href="https://world-clock-mml95.netlify.app" target="_blank">
+            <h3 class="project-title"><a href="https://mml95-world-clock.netlify.app" target="_blank" title="Launch world clock">World Clock</a></h3>
+              <div class="project-1 border-box"><a href="https://mml95-world-clock.netlify.app" target="_blank">
                   <img
                     src="/src/world-clock.png"
                     class="img-fluid"
@@ -108,8 +108,8 @@
       <div class="row">
         <div class="col-md-6">
           <div class="project-description">
-            <h3 class="project-title"><a href="https://dictionary-mml95.netlify.app" target="_blank" title="Launch dictionary">Dictionary</a></h3>
-              <div class="project-1 border-box"><a href="https://dictionary-mml95.netlify.app" target="_blank">
+            <h3 class="project-title"><a href="https://mml95-dictionary.netlify.app" target="_blank" title="Launch dictionary">Dictionary</a></h3>
+              <div class="project-1 border-box"><a href="https://mml95-dictionary.netlify.app" target="_blank">
                   <img
                     src="/src/dictionary.png"
                     class="img-fluid"
@@ -126,8 +126,8 @@
 
         <div class="col-md-6">
           <div class="project-description">
-            <h3 class="project-title"><a href="https://arizona-travel-website-mml95.netlify.app/" target="_blank" title="Launch travel website">Travel</a></h3>
-              <div class="project-1 border-box"><a href="https://arizona-travel-website-mml95.netlify.app/" target="_blank">
+            <h3 class="project-title"><a href="https://mml95-arizona-travel-website.netlify.app/" target="_blank" title="Launch travel website">Travel</a></h3>
+              <div class="project-1 border-box"><a href="https://mml95-arizona-travel-website.netlify.app/" target="_blank">
                 <img
                   src="/src/Arizona.png"
                   class="img-fluid"
@@ -146,8 +146,8 @@
       <div class="row">
         <div class="col-md-6">
           <div class="project-description">
-            <h3 class="project-title"><a href="https://travel-ops-mml95.netlify.app" target="_blank" title="Launch travel website">Travel Deux</a></h3>
-            <div class="project-1 border-box"><a href="https://travel-ops-mml95.netlify.app" target="_blank">
+            <h3 class="project-title"><a href="https://mml95-travel-ops.netlify.app" target="_blank" title="Launch travel website">Travel Deux</a></h3>
+            <div class="project-1 border-box"><a href="https://mml95-travel-ops.netlify.app" target="_blank">
                 <img
                   src="/src/hawaii-travel.png"
                   class="img-fluid"
@@ -164,8 +164,8 @@
 
         <div class="col-md-6">
           <div class="project-description">
-            <h3 class="project-title"><a href="https://35mm-cameras-mml95.netlify.app" target="_blank" title="Launch camera landing page">Photography</a></h3>
-            <div class="project-1 border-box"><a href="https://35mm-cameras-mml95.netlify.app" target="_blank">
+            <h3 class="project-title"><a href="https://mml95-35mm-cameras.netlify.app" target="_blank" title="Launch camera landing page">Photography</a></h3>
+            <div class="project-1 border-box"><a href="https://mml95-35mm-cameras.netlify.app" target="_blank">
                 <img
                   src="/src/35mm-cameras.png"
                   class="img-fluid"
@@ -184,8 +184,8 @@
       <div class="row">
         <div class="col-md-6">
           <div class="project-description">
-            <h3 class="project-title"><a href="https://ethereum-mml95.netlify.app" target="_blank" title="Launch Fidelity landing page">Blockchain</a></h2>
-              <div class="project-1 fidelity border-box"><a href="https://ethereum-mml95.netlify.app" target="_blank">
+            <h3 class="project-title"><a href="https://mml95-ethereum.netlify.app" target="_blank" title="Launch Fidelity landing page">Blockchain</a></h2>
+              <div class="project-1 fidelity border-box"><a href="https://mml95-ethereum.netlify.app" target="_blank">
                 <img
                   src="/src/ethereum.png"
                   class="img-fluid"
@@ -204,8 +204,8 @@
               <!-- <div class="d-flex align-items-center justify-content-center"> -->
         <div class="col-md-6">
           <div class="project-description">
-            <h3 class="project-title"><a href="https://coming-soon-mml95.netlify.app" target="_blank"  title="Launch storefront">Web Store</a></h3>
-              <div class="project-1 border-box"><a href="https://coming-soon-mml95.netlify.app" target="_blank">
+            <h3 class="project-title"><a href="https://mml95-coming-soon.netlify.app" target="_blank"  title="Launch storefront">Web Store</a></h3>
+              <div class="project-1 border-box"><a href="https://mml95-coming-soon.netlify.app" target="_blank">
                 <img
                   src="/src/coming-soon.png"
                   class="img-fluid"
