--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
     <div class="container">
       <div class="row" id="project-header">
         <div class="col text-center">
-          <h2><span class="page-name project-header-font">Projects</span></h2>
+          <h2><span class="block page-name project-header-font">Projects</span></h2>
         </div>
       </div>
 
-      <div class="row">
+      <div class="row block">
         <div class="col-md-6">
           <div class="project-description">
             <h3 class="project-title"><a href="https://mml95-world-weather.netlify.app" target="_blank" title="Launch weather app">Weather</a> -<a href="https://mml95-react-world-weather.netlify.app" title="Launch React app version" target="_blank"><i class="fa-brands fa-react fa-spin" style="--fa-animation-duration: 4.5s"></i></a></h3>
@@ -105,7 +105,7 @@
         </div>
       </div>
 
-      <div class="row">
+      <div class="row block">
         <div class="col-md-6">
           <div class="project-description">
             <h3 class="project-title"><a href="https://mml95-dictionary.netlify.app" target="_blank" title="Launch dictionary">Dictionary</a></h3>
@@ -143,7 +143,7 @@
         </div>
       </div>
 
-      <div class="row">
+      <div class="row block">
         <div class="col-md-6">
           <div class="project-description">
             <h3 class="project-title"><a href="https://mml95-travel-ops.netlify.app" target="_blank" title="Launch travel website">Travel Deux</a></h3>
@@ -181,7 +181,7 @@
         </div>
       </div>
 
-      <div class="row">
+      <div class="row block">
         <div class="col-md-6">
           <div class="project-description">
             <h3 class="project-title"><a href="https://mml95-ethereum.netlify.app" target="_blank" title="Launch Fidelity landing page">Blockchain</a></h2>
@@ -227,10 +227,10 @@
     <div class="container">
       <div class="row" id="about-header">
         <div class="col">
-          <h2 class="text-center"><span class="page-name about-header-font">About Me</span></h2>
+          <h2 class="text-center"><span class=" block page-name about-header-font">About Me</span></h2>
         </div>
       </div>
-      <div class="row">
+      <div class="row block">
         <div class="col-md-6">
           <div class="about-section">
             <p class="about-paragraph text-start">
@@ -257,10 +257,10 @@
     <div class="container">
       <div class="row" id="epilogue-header">
         <div class="col text-center">
-          <h2><span class="page-name misc-header-font">Epilogue</span></h2>
+          <h2><span class=" block page-name misc-header-font">Epilogue</span></h2>
         </div>
       </div>
-      <div class="row">
+      <div class="row block">
         <div class="col">
           <div class="epilogue-section">
             <p class="epilogue-paragraph">
@@ -276,14 +276,14 @@
     <div class="container">
       <div class="row" id="contact-header">
         <div class="col text-center">
-          <h2><span class="page-name misc-header-font">Contact</span></h2>
+          <h2><span class=" block page-name misc-header-font">Contact</span></h2>
         </div>
       </div>
     </div>
   </section>
 
   <footer>
-    <div class="social-links d-flex justify-content-center">
+    <div class=" block social-links d-flex justify-content-center">
       <a href="mailto:mml@mml95.dev" target="_blank" title="Email me"><i class="fa-solid fa-envelope"></i></a>
       <a href="https://github.com/mml95" target="_blank" title="View my Github profile"><i class="fa-brands fa-github fa-bounce"style="--fa-animation-duration: 2s"></i></a>
       <a href="https://www.linkedin.com/in/mml95/" target="_blank" title="View my LinkedIn page"><i class="fa-brands fa-linkedin"></i></a>
