No reveal on social links

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
   </section>
 
   <footer>
-    <div class=" block social-links d-flex justify-content-center">
+    <div class="social-links d-flex justify-content-center">
       <a href="mailto:mml@mml95.dev" target="_blank" title="Email me"><i class="fa-solid fa-envelope"></i></a>
       <a href="https://github.com/mml95" target="_blank" title="View my Github profile"><i class="fa-brands fa-github fa-bounce"style="--fa-animation-duration: 2s"></i></a>
       <a href="https://www.linkedin.com/in/mml95/" target="_blank" title="View my LinkedIn page"><i class="fa-brands fa-linkedin"></i></a>
